--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 click==7.1.2
-Flask==1.1.2
+Flask==3.0.0
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
+transformers==4.35.2
+torch==2.1.1
+sentencepiece==0.1.99
+protobuf==4.25.1
